Added a "hidden" and "overlap" classes on the modal HTML section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </form>
 
     <!-- Modal for displaying certificates -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
+    <div id="modal" class="modal hidden">
+        <div class="overlay hidden">
             <span class="close">&times;</span>
             <div id="certificateContent">
                 <!-- Certificate content will appear here -->
