--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </form>
 
     <!-- Modal for displaying certificates -->
-    <div id="modal" class="modal hidden">
-        <div class="overlay hidden">
+    <div id="modal" class="modal">
+        <div class="modal-content">
             <span class="close">&times;</span>
             <div id="certificateContent">
                 <!-- Certificate content will appear here -->
             </div>
         </div>
-    </div>
+    </div>z
 
     <script src="index.js"></script>
 </body>
