added logo on my js file using the image tags. And also adjusted the size of the logo on css file using certficateContent img attribute

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Certificate content will appear here -->
             </div>
         </div>
-    </div>z
+    </div>
 
     <script src="index.js"></script>
 </body>
